test/().cc
#include <iostream>

int main()
{
  int a,b=2;
  a(b); // error
  std::cout << a;
}
